Fix blog content spacing. Add icons and button component

--- a/src/components/BlogContent.module.css
+++ b/src/components/BlogContent.module.css
@@ -4,9 +4,13 @@
 }
 
 .article h2 {
-    padding: 7px 0;
+    padding: 14px 0;
 }
 
-.article p:last-child {
-    padding: 7px 0;
+.article p:nth-of-type(3) {
+    margin: 14px 0;
+}
+
+.article svg path {
+    color: #F64C72;
 }
